# server-config

./: .gitignore  README.md  YOUR-DOMAIN.conf  bob.yml  dale.yml  flake.nix  hosts  main.yml  mike.yml  nftables.conf  raspberry.yml  requirements.txt  secrets.nix  server.yml  sshd_config  unbound.conf  vars.yml
.github/workflows/: flake-check.yml  flake-update.yml
checks/: deadnix.nix  nixfmt.nix  statix.nix
docs/: RASPBERRY.md  SERVER.md  nixops.md  nixos.md  nixos_raspberrypi.md  tricks.md
etc/: nftables.conf
etc/nginx/: nginx.conf
etc/unbound/: unbound.conf
fail2ban/: jail.local
group_vars/: all.yml  raspberry.yml  server.yml
home/: fish.nix  git.nix  home.nix  mpv.nix  neovim.nix  programs.nix  ssh.nix  starship.nix  tmux.nix  work.nix  yt-dlp.nix
home/desktop/: alacritty.nix  associations.nix  default.nix  (+11 more)
host_vars/: bob.yml  dale.yml  mike.yml
infra/: default.nix  types.nix
intranet/: default.nix  devices.nix  ranges.nix  subnets.nix  vpn.nix  wireguard.nix
inwx/: main.tf  variables.tf
machines/: intranet.nix
misc/: unbound.conf
modules/: blocky.nix  monitoring.nix  unbound-blocker.nix  unbound.nix
nginx/: nginx.conf
nixos/: common.nix  flake.nix  intranet.nix
old/: dale.yml  hosts
playbooks/: main.yml  requirements.txt  vars.yml
services/: monitoring.nix  openssh.nix  unbound-blocker.nix  unbound.nix
shells/: infra.nix  work.nix
src/unbound_blocker/: pyproject.toml
src/unbound_blocker/src/unbound_blocker/: fetch_blocklist.py
ssh/: sshd_config
unbound/: unbound.conf
unbound_blocker/: README.md
util/: types.nix
(+185 files in other folders)
