[build-system]
requires = [ "setuptools >= 6.1.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "unbound-blocker"
version = "0.1.0"
authors = [
  { name = "Tomas Kala", email = "public@tomaskala.com" },
]
description = "DNS-level content blocking utilizing Unbound"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
  "requests ~= 2.28.2"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
fetch_blocklist = "unbound_blocker.fetch_blocklist:main"
